@@ -1,3 +1,6 @@
+2005-04-26  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
+	* src/PedView.py: Removed navigation buttons in flavour of a menu;
+
 2005-04-23  Don Allingham  <don@gramps-project.org>
 	* src/ListModel.py: keep track of data index
 	* src/EventEdit.py: use new label scheme for tabs that uses an
